Home Hero layout fixes

--- a/src/templates/components/home-hero.twig
+++ b/src/templates/components/home-hero.twig
@@ -19,7 +19,7 @@
       <div class="home-hero__content__carousel">
         <div class="home-hero__text">
           <h1 class="home-hero__heading">
-            <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
+            {{ 'TAKE ACTION TO PASS A CLEAN DREAM' | wrap-words }}
           </h1>
           <p class="home-hero__body">
             <strong>OUR MESSAGE IS CLEAR:</strong> Now is the time for members of Congress to show that they are listening and acting on their constituent’s demand for the clean Dream Act—or begin facing the consequence.
