--- a/src/styles/components/_home-hero.scss
+++ b/src/styles/components/_home-hero.scss
@@ -149,7 +149,9 @@
     @include respond((
       margin-right: null null 83px,
     ));
+
     span {
+      display: inline-block;
       background-color: $black;
       color: $azure;
       position: relative;
@@ -158,6 +160,8 @@
         font-size: 32px null 48px,
         line-height: 1,
         letter-spacing: 0,
+        padding-left: 5px,
+        padding-right: 5px,
       ));
     }
   }
@@ -194,9 +198,10 @@
     svg {
       position: relative;
       @include respond((
-        margin-left: 10px,
-        width: 8px,
-        height: 12px,
+        margin-left: 8px,
+        width: 24px,
+        height: 24px,
+        padding: (6px 8px) null,
       ));
     }
   }
