Quickfix: Home hero heading width

--- a/src/styles/components/_home-hero.scss
+++ b/src/styles/components/_home-hero.scss
@@ -147,7 +147,7 @@
 
   &__heading {
     @include respond((
-      margin-right: null null 83px,
+      margin-right: null null nul 83px,
     ));
 
     span {
