--- a/src/styles/settings/_typography.scss
+++ b/src/styles/settings/_typography.scss
@@ -1,17 +1,17 @@
 @font-face {
   font-family: 'Roboto Condensed';
-  src: url('/fonts/Roboto-Condensed.ttf');
+  src: url('/fonts/RobotoCondensed-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
-  src: url('/fonts/Roboto-BoldCondensed.ttf');
+  src: url('/fonts/RobotoCondensed-Bold.ttf');
   font-weight: bolder;
 }
 
 @font-face {
   font-family: 'Roboto Regular';
-  src: url('/fonts/Roboto-Light.ttf');
+  src: url('/fonts/Roboto-Regular.ttf');
 }
 
 @font-face {
@@ -20,7 +20,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto-Bold';
+  font-family: 'Roboto Bold';
   src: url('/fonts/Roboto-Bold.ttf');
 }
 
