--- a/src/styles/components/_sign-form.scss
+++ b/src/styles/components/_sign-form.scss
@@ -5,19 +5,21 @@
     @include font(roboto);
     @include respond((
       margin-top: 20px,
-      font-size: 11px,
+      font-size: 13px,
       line-height: 16.5px,
     ));
   }
 
-  &__link {
+  &__link:link,
+  &__link:visited,
+  &__link:active {
     display: block;
     color: $dark-gray;
     @include font(roboto-bold);
     @include respond((
       margin-top: 10px,
-      font-size: 11px,
-      line-height: 20px,
+      font-size: 13px,
+      line-height: 16.5px,
     ));
   }
 
@@ -25,9 +27,10 @@
     display: table;
     margin-left: auto;
     margin-right: auto;
-    @include font(roboto-condensed-bold);
+    width: 92px;
+    @include btn--azure;
     @include respond((
-      margin-top: 20px,
+      margin-top: 32px,
       font-size: 20px,
       line-height: 34px,
     ));
