--- a/src/templates/components/sign-form.twig
+++ b/src/templates/components/sign-form.twig
@@ -56,7 +56,7 @@
     See Privacy Policy >
   </a>
 
-  <button class="btn" type="submit">SUBMIT →</button>
+  <button class="btn" type="submit">SUBMIT</button>
 
 
 
