--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -10,7 +10,7 @@
   &__logo {
     width: 85px;
     @include respond((
-      margin-left: null null percentage(130px/$bp-xl),
+      margin-left: null null percentage(39px/$bp-lg) percentage(130px/$bp-xl),
     ));
 
     img {
@@ -23,10 +23,10 @@
     margin-top: 30px;
     @include respond((
       display: null null flex,
-      padding-top: null null 30px,
-      padding-bottom: null null 39px,
-      padding-left: null null percentage(130px/$bp-xl),
-      padding-right: null null percentage(130px/$bp-xl),
+      padding-top: null null null 30px,
+      padding-bottom: null null null 39px,
+      padding-left: null null percentage(39px/$bp-lg) percentage(130px/$bp-xl),
+      padding-right: null null percentage(39px/$bp-lg) percentage(130px/$bp-xl),
     ));
   }
 
