--- a/src/styles/components/_signers.scss
+++ b/src/styles/components/_signers.scss
@@ -23,7 +23,7 @@
     &__author {
       @include font(roboto);
       @include respond((
-        font-size: 11px null 18px,
+        font-size: 14px null 18px,
         line-height: 21px nul 27px,
         letter-spacing: -.1px,
         margin-left: null null 0,
@@ -35,9 +35,8 @@
       @include font(roboto);
       @include respond((
         color: #696a6a,
-        font-size: 11px null 18px,
+        font-size: 14px null 18px,
         line-height: 27px null 27px,
-        margin-right: null null auto,
       ));
     }
 
@@ -46,15 +45,15 @@
       font-style: italic;
       @include font(roboto-medium);
       @include respond((
-        margin-top: 10px null 5px,
+        margin-top: 10px null,
         font-size: 14px null 18px,
         line-height: 21px null 27px,
-        margin-right: null null percentage(-90/600),
       ));
 
-      p {
+      & p {
         @include respond((
-          flex-grow: null null 1,
+          width: null null percentage(600/780),
+          margin-right: null null auto,
         ));
       }
     }
@@ -66,9 +65,10 @@
       flex-shrink: 0;
       background-color: transparent;
       @include respond((
-        width: 20px null 25px,
-        height: 20px null 25px,
-        margin-left: 7px,
+        width: 24px,
+        height: 24px,
+        padding: (0 6px) null,
+        margin-left: 7px null auto,
         margin-right: 0,
       ));
 
