--- a/src/styles/settings/_reset.scss
+++ b/src/styles/settings/_reset.scss
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto Regular', sans-serif;
   -webkit-font-smoothing: antialiased;
+}
+
+body {
+  font-family: 'Roboto Regular', sans-serif;
+  font-size: 16px;
+  line-height: 24px;
 }
