Use list element for illustration body

--- a/src/styles/components/_home-illustration.scss
+++ b/src/styles/components/_home-illustration.scss
@@ -96,6 +96,20 @@
       color: $white,
       margin-top: 20px null 40px,
     ));
+
+    ul {
+
+    }
+
+    li {
+      position: relative;
+
+      &::before {
+        content: '•';
+        margin-right: .3em;
+        font-size: .7em;
+      }
+    }
   }
 
 
