--- a/src/templates/components/home-illustration.twig
+++ b/src/templates/components/home-illustration.twig
@@ -31,12 +31,12 @@
         <div class="home-illustration__body">
           <p>Our values manifest themselves in the issues we target. Here are just a few of our focus areas:</p>
           <br>
-          <p>
-            2018 Elections <br>
-            Tax Reform <br>
-            Immigration <br>
-            Healthcare <br>
-          </p>
+          <ul>
+            <li>2018 Elections</li>
+            <li>Tax Reform</li>
+            <li>Immigration</li>
+            <li>Healthcare</li>
+          </ul>
         </div>
       </div>
     </div>
