--- a/src/styles/components/_testimonial.scss
+++ b/src/styles/components/_testimonial.scss
@@ -6,10 +6,10 @@
       display: block null flex,
       justify-content: center,
       align-items: center,
-      padding-top: 50px,
-      padding-bottom: 50px,
-      padding-left: 30px null percentage(130px/$bp-xl),
-      padding-right: 30px null percentage(230px/$bp-xl),
+      padding-top: 24px null 50px,
+      padding-bottom: 24px null 50px,
+      padding-left: 16px null percentage(130px/$bp-xl),
+      padding-right: 16px null percentage(230px/$bp-xl),
     ));
   }
 
@@ -45,8 +45,8 @@
     @include font(roboto-medium);
     @include respond((
       font-style: italic,
-      font-size: 24px,
-      line-height: 30px null 36px,
+      font-size: 16px null 24px,
+      line-height: 24px null 36px,
     ));
   }
 
@@ -54,7 +54,7 @@
     @include respond((
       font-size: 16px,
       line-height: 36px,
-      color: $black,
+      color: transparentize($black, 1-.54) null $black,
       float: right,
     ));
 
