--- a/src/templates/components/join.twig
+++ b/src/templates/components/join.twig
@@ -1,4 +1,4 @@
-<sectin class="join">
+<section class="join">
 
   <img src="/images/home-signup-image.jpg" alt="" class="join__bg">
 
@@ -30,4 +30,4 @@
     </div>
 
   </div>
-</sectin>
+</section>
