Home hero headline box

--- a/src/templates/components/home-hero.twig
+++ b/src/templates/components/home-hero.twig
@@ -31,7 +31,7 @@
         </div>
         <div class="home-hero__text">
           <h1 class="home-hero__heading">
-            <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
+            {{ 'LOREM IPSUM DOLOR SIT AMET' | wrap-words }}
           </h1>
           <p class="home-hero__body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora quibusdam a dolore officia quo magni, quia id consequuntur repudiandae, ratione eum officiis autem. Vero vel sunt provident eligendi porro consequuntur!
@@ -43,7 +43,7 @@
         </div>
         <div class="home-hero__text">
           <h1 class="home-hero__heading">
-            <span>TAKE ACTION TO PASS A CLEAN DREAM ACT</span>
+            {{ 'TAKE ACTION TO PASS A CLEAN DREAM ACT' | wrap-words }}
           </h1>
           <p class="home-hero__body">
             Officiis quis debitis, nemo architecto iure, incidunt aut suscipit, quidem harum ea vero quibusdam fugiat modi. Assumenda, libero, doloribus!
