Home hero second item color

--- a/src/styles/components/_home-hero.scss
+++ b/src/styles/components/_home-hero.scss
@@ -143,6 +143,13 @@
       position: absolute;
       opacity: 0;
     }
+
+    &:nth-child(2) {
+      .home-hero__heading span {
+        background-color: $red;
+        color: $white;
+      }
+    }
   }
 
 
