--- a/src/templates/pages/donate-v2.twig
+++ b/src/templates/pages/donate-v2.twig
@@ -4,5 +4,5 @@
 
 {% block content %}
   {% include 'components/donate-form' %}
-  {% include 'components/donate-terms' %}
+  {% include 'components/donate-terms-v3' %}
 {% endblock %}
