Fix form logic for safari support

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -283,6 +283,13 @@ form {
   }
 
 
+  // Use inline-table for submit buttons due to safari issues
+  [type="submit"] {
+    display: inline-table;
+    text-align: center;
+  }
+
+
 }
 
 
