--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -6,6 +6,7 @@ $slate-gray: #696a6a;
 $dark-gray: #222222;
 $dark-gray-38: rgba(34, 34, 34, 0.38);
 $black: #000000;
+$deep-sea-blue: #005680;
 $cerulean: #0080bf;
 $azure: #00abff;
 $light-blue: #99ddff;
