--- a/src/templates/components/donate-confirm.twig
+++ b/src/templates/components/donate-confirm.twig
@@ -28,8 +28,8 @@
           </div>
         </div>
       </div>
-      <button class="donate-confirm__view-receipt">View Receipt</button>
-      <button class="donate-confirm__hide-receipt">Hide Receipt</button>
+      <a class="btn donate-confirm__view-receipt">View Receipt</a>
+      <a class="btn donate-confirm__hide-receipt">Hide Receipt</a>
     </div>
 
     <div class="donate-next">
