Update legal text on thank you page

--- a/src/templates/pages/donate-confirm.twig
+++ b/src/templates/pages/donate-confirm.twig
@@ -4,5 +4,5 @@
 
 {% block content %}
   {% include 'components/donate-confirm' %}
-  {% include 'components/donate-terms' %}
+  {% include 'components/donate-terms-v3' %}
 {% endblock %}
