Thank you page fixes

--- a/src/styles/components/_donate-confirm.scss
+++ b/src/styles/components/_donate-confirm.scss
@@ -168,8 +168,7 @@
   }
 
   .donate-form__action--solid:not([disabled]) {
-    background-color: $azure;
-    color: $white;
+    @include btn--azure;
   }
 
   .donate-form__action--flat {
