Quickpay logic fix

--- a/src/styles/components/_donate-form-v3.scss
+++ b/src/styles/components/_donate-form-v3.scss
@@ -90,7 +90,7 @@
       }
     }
 
-    .price-select-group {
+    .price-select {
       max-width: 285px;
       flex-wrap: wrap;
       border-bottom: 0;
