--- a/src/templates/components/donate-form-v3.twig
+++ b/src/templates/components/donate-form-v3.twig
@@ -8,7 +8,7 @@
       <div class="donate-form__amount-info">
         <div class="donate-form__step__heading"><span>Donation Amount</span></div>
         <div class="donate-form__step__content">
-          <div class="price-select-group">
+          <div class="price-select price-select-group">
             <div class="radio-input">
               <input type="radio" name="amount" id="amount-$20" value="$20" required>
               <label for="amount-$20">$20</label>
