--- a/src/templates/components/donate-quickpay-v3.twig
+++ b/src/templates/components/donate-quickpay-v3.twig
@@ -9,7 +9,7 @@
         <div class="donate-form__step__content">
           <form class="donate-form__fields donate-shortform" method="POST">
             <p>Choose an amount to donate from your saved payment method</p>
-            <div class="price-select price-select-group">
+            <div class="price-select">
               <div class="radio-input">
                 <input type="radio" name="amount" id="amount-$25" value="$25" required>
                 <label for="amount-$25">$15</label>
