--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -45,17 +45,17 @@
 
       <div class="footer__text">
         <div class="footer__text__item">
-          A joint website of MoveOn.org Civic Action and MoveOn.org Political Action. MoveOn.org Political Action and MoveOn.org Civic Action are separate organizations.
+          A joint website of <a href="/">MoveOn.org</a> Civic Action and <a href="/">MoveOn.org</a> Political Action. <a href="/">MoveOn.org</a> Political Action and <a href="/">MoveOn.org</a> Civic Action are separate organizations.
         </div>
         <div class="footer__text__item">
-          MoveOn.org Civic Action is a 501(c)(4) organization which primarily focuses on nonpartisan education and advocacy on important national issues.
+          <a href="/">MoveOn.org</a> Civic Action is a 501(c)(4) organization which primarily focuses on nonpartisan education and advocacy on important national issues.
           <a href="#" class="footer__text__cta">
             Donate to MoveOn Civic Action
             {% include 'components/svg' with {id: 'caret-right'} only %}
           </a>
         </div>
         <div class="footer__text__item">
-          MoveOn.org Political Action is a federal political committee which primarily helps members elect candidates who reflect our values through a variety of activities aimed at influencing the outcome of the next election.
+          <a href="/">MoveOn.org</a> Political Action is a federal political committee which primarily helps members elect candidates who reflect our values through a variety of activities aimed at influencing the outcome of the next election.
           <a href="#" class="footer__text__cta">
             Donate to MoveOn Civic Action
             {% include 'components/svg' with {id: 'caret-right'} only %}
@@ -71,7 +71,7 @@
         <a href="#">{% include 'components/svg' with {id: 'instagram'} only %}</a>
       </div>
       <div class="footer__fineprint">
-        Paid for in part by <strong>MoveOn Political Action</strong>. Not authorized by any candidate or candidate's committee.
+        Paid for in part by <a href="#"><strong>MoveOn Political Action</strong></a>. Not authorized by any candidate or candidate's committee.
       </div>
     </div>
   </div>
