Sign form toggle fix for safari

--- a/src/styles/components/_sign-form.scss
+++ b/src/styles/components/_sign-form.scss
@@ -37,9 +37,8 @@
   }
 
   &__modal-toggle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    text-align: center;
     width: 100%;
     height: 50px;
     position: fixed;
