--- a/src/templates/components/share-modal.twig
+++ b/src/templates/components/share-modal.twig
@@ -13,7 +13,7 @@
     <p><strong>Share</strong></p>
 
     <div class="share-modal__cta-group">
-      <a href="#" class="share-modal__cta" disabled>
+      <a href="#" class="share-modal__cta">
         {% include 'components/svg' with {id: 'mail'} only %}
         Email Petition
       </a>
