Fix off play button in safari

--- a/src/styles/components/_petition-card.scss
+++ b/src/styles/components/_petition-card.scss
@@ -71,6 +71,9 @@
     }
 
     &__play {
+      background-image: url('../images/icons/play.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
       position: absolute;
       top: 50%;
       left: 50%;
