--- a/src/templates/components/petition-card.twig
+++ b/src/templates/components/petition-card.twig
@@ -10,9 +10,7 @@
 
       <div class="petition-card__media">
         <img src="/images/petition-card-media.jpg" alt="">
-        <button class="btn petition-card__media__play">
-          <img src="/images/icons/play.svg" alt="">
-        </button>
+        <button class="btn petition-card__media__play"></button>
         <div class="petition-card__meta">
           Posted by MoveOn <br>
           19,852 Views
