Navigation caret rotation fix

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -159,6 +159,9 @@
   }
 
   &__dropdown {
+    .nav__primary__caret {
+      padding: 5px;
+    }
 
     @include breakpoint(lg) {
       &:hover {
