Petition detail contact CTA layout fix

--- a/src/styles/components/_petition-details.scss
+++ b/src/styles/components/_petition-details.scss
@@ -122,7 +122,7 @@
     }
 
     &__cta {
-      display: table;
+      display: inline-block;
       @include font(roboto-condensed-bold);
       @include respond((
         color: $black,
@@ -131,6 +131,15 @@
         font-size: 14px null 20px,
         line-height: 21px null 34px,
       ));
+    }
+
+    svg {
+      width: 24px;
+      height: 24px;
+      fill: $black;
+      padding: 5px;
+      position: relative;
+      top: .2em;
     }
   }
 
