--- a/src/styles/components/_home-carousel.scss
+++ b/src/styles/components/_home-carousel.scss
@@ -67,7 +67,12 @@
       }
     }
 
-    &:hover,
+    &:hover {
+      .home-carousel__slide-content {
+        opacity: 1 !important;
+      }
+    }
+
     &.is-selected {
       .home-carousel__slide-content {
         opacity: 1;
@@ -173,6 +178,14 @@
   // ENABLED CAROUSEL
   .flickity-enabled {
 
+    .flickity-viewport:hover {
+      .home-carousel__slide {
+        .home-carousel__slide-content {
+          opacity: 0;
+        }
+      }
+    }
+
     .home-carousel__slide + .home-carousel__slide {
       opacity: 1;
       pointer-events: auto;
@@ -183,7 +196,8 @@
       justify-content: center;
       align-items: center;
       bottom: 0;
-      height: 24px,
+      height: 24px;
+      left: 0;
     }
 
     .dot {
